# doc-ai-demo

./: .gitignore  Cargo.toml  DSAideas.md  README.md
DocAiClient/: MainForm.Designer.cs  MainForm.cs  MyHttpClients.cs  Program.cs
data/contract-rvw/: contract_bob.txt
data/customer-spt/: ticket_101.txt
data/customer-support/: ticket_202.txt
data/employment-contracts/: contract_alice.txt
data/invoice-proc/: inv_001.txt
data/invoices/: inv_002.txt
data/knowledge-base/: faq_returns.txt  policy_remote.txt  policy_vacation.txt
demo/: forms.html  tabbed.html
html_demo/: tabbed.html
server_rust/: Cargo.toml
server_rust/src/: ai.rs  cache.rs  cla.rs  data.rs  indexer.rs  lib.rs  main.rs  retrieval.rs  types.rs
src/: lib.rs  main.rs
test/: curl-test.sh
