[package]
name = "doc-ai-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"                                      # easy error handling
clap = { version = "4.5", features = ["derive"] }   # for nice CLI args
lru = "0.12"
once_cell = "1.19"                                  # for lazy static init
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
